--- a/01_TwoPointers/Medium-Triplet Sum to Zero.ipynb
+++ b/01_TwoPointers/Medium-Triplet Sum to Zero.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "546948be",
+   "id": "f560acf5",
    "metadata": {},
    "source": [
     "## Triplet Sum to zero (15. 3Sum)\n",
@@ -44,19 +44,19 @@
   },
   {
    "cell_type": "raw",
-   "id": "3f5acddc",
+   "id": "273065a4",
    "metadata": {},
    "source": [
     "Approach:\n",
     "    Sort the array, then apply the Two pointer solution.\n",
     "    Since, it is looking for three sum, so sun two pointers for each value of i.\n",
-    "    i the iterator for loop."
+    "    i the iterator for loop.s"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "0b9ea918",
+   "id": "af391f31",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,7 +82,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "35cf2228",
+   "id": "792ba84c",
    "metadata": {},
    "outputs": [
     {
@@ -104,7 +104,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "0b39c1f4",
+   "id": "c4c6ead4",
    "metadata": {},
    "outputs": [
     {
@@ -126,7 +126,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "304b65f4",
+   "id": "84f986b2",
    "metadata": {},
    "outputs": [
     {
@@ -148,7 +148,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "98d7041b",
+   "id": "769f05f5",
    "metadata": {},
    "outputs": [],
    "source": []
