--- a/01_TwoPointers/Medium-Minimum Window Sort.ipynb
+++ b/01_TwoPointers/Medium-Minimum Window Sort.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "e67fc10c",
+   "id": "6122afc3",
    "metadata": {},
    "source": [
     "## Problem: Minimum Window Sort\n",
@@ -37,9 +37,25 @@
    ]
   },
   {
+   "cell_type": "raw",
+   "id": "c2c1d5c7",
+   "metadata": {},
+   "source": [
+    "Approach:\n",
+    "    Find out the item when ordering is broken.Means when earlier number is greater than next number. To kow the positions from where ordering should restore, we must know the minimum number and maximum number in broken order. \n",
+    "    So, get minimum number and maximum number whenever ordering is broken in a for loop.\n",
+    " If no orderig is broken, then return zero.\n",
+    " Now, we have minimum number and maximum number, find the index of minimum number and maximum number:\n",
+    "     Index of minimum number: Start from zero (leftIndex), keep moving to next element till minimum number is greater than number at leftIndex\n",
+    "     Index of maximum number: Start from last position (len(nums)-1), keep moving to previous element till maximum number is less than number at right index.\n",
+    " return diffrence of left and right index.\n",
+    "     "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "8221916e",
+   "id": "60e9ba90",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,7 +82,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "59bfebcc",
+   "id": "ca756b09",
    "metadata": {},
    "outputs": [
     {
@@ -88,7 +104,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "ce20bec3",
+   "id": "3a3c83b1",
    "metadata": {},
    "outputs": [
     {
@@ -110,7 +126,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3bc40497",
+   "id": "35bb624f",
    "metadata": {},
    "outputs": [],
    "source": []
