--- a/02_Island-MatrixTraversal/Easy-Number Of Islands.ipynb
+++ b/02_Island-MatrixTraversal/Easy-Number Of Islands.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "e141e497",
+   "id": "4532ec50",
    "metadata": {},
    "source": [
     "## Problem: Number of Islands\n",
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "raw",
-   "id": "a13dfa36",
+   "id": "0f8b5a36",
    "metadata": {},
    "source": [
     "Approach:\n",
@@ -56,11 +56,11 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "1fee9e91",
+   "id": "1266889b",
    "metadata": {},
    "outputs": [],
    "source": [
-    "## BFS Technique\n",
+    "## DFS Technique\n",
     "def numIslands(grid):\n",
     "    num = 0\n",
     "    \n",
@@ -98,7 +98,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "1f73a37e",
+   "id": "a51a3cfd",
    "metadata": {},
    "outputs": [
     {
@@ -125,7 +125,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "472f6bc7",
+   "id": "c4ec2632",
    "metadata": {},
    "outputs": [
     {
@@ -152,7 +152,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "c9ef8bec",
+   "id": "352f70fe",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -195,7 +195,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "11ca2244",
+   "id": "c2b04141",
    "metadata": {},
    "outputs": [
     {
@@ -222,7 +222,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "5be32805",
+   "id": "0f054152",
    "metadata": {},
    "outputs": [
     {
@@ -249,7 +249,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "66e9babc",
+   "id": "db19a989",
    "metadata": {},
    "outputs": [],
    "source": []
