--- a/02_Island-MatrixTraversal/Easy-Number Of Islands.ipynb
+++ b/02_Island-MatrixTraversal/Easy-Number Of Islands.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "4532ec50",
+   "id": "165d378b",
    "metadata": {},
    "source": [
     "## Problem: Number of Islands\n",
@@ -45,18 +45,21 @@
   },
   {
    "cell_type": "raw",
-   "id": "0f8b5a36",
+   "id": "3c6a064e",
    "metadata": {},
    "source": [
     "Approach:\n",
-    "Island problems have simple technique to visit each cells, mark visited cell either modifying the matrix or taking auxiliary matrix with boolean values. Thi helps to avoid multiple time visit of same cell.\n",
-    "You can use DFS or BFS to solve it.\n"
+    "Island problems have simple technique to visit each cells, mark visited cell either modifying the matrix or taking auxiliary matrix with boolean values. This helps to avoid multiple time visit of same cell.\n",
+    "You can use DFS or BFS to solve it.\n",
+    "Here, as 1 represents the land, so start with cell having value = 1.\n",
+    "Do the DFS, and check the value of neighbouring cells, if it is also 1, then continue DFS else return 1 (count). To avoid revisiting the cells, set the visited cell's value as 2.\n",
+    "Count would be accoumulated in the main loop.\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "1266889b",
+   "id": "e010ec4a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,7 +101,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "a51a3cfd",
+   "id": "f6766a9a",
    "metadata": {},
    "outputs": [
     {
@@ -125,7 +128,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "c4ec2632",
+   "id": "e2e901a5",
    "metadata": {},
    "outputs": [
     {
@@ -152,7 +155,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "352f70fe",
+   "id": "d373e247",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -195,7 +198,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "c2b04141",
+   "id": "810d6197",
    "metadata": {},
    "outputs": [
     {
@@ -222,7 +225,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "0f054152",
+   "id": "1e8932e9",
    "metadata": {},
    "outputs": [
     {
@@ -249,7 +252,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "db19a989",
+   "id": "f4b11328",
    "metadata": {},
    "outputs": [],
    "source": []
