--- a/02_Island-MatrixTraversal/Easy-Number Of Islands.ipynb
+++ b/02_Island-MatrixTraversal/Easy-Number Of Islands.ipynb
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 34,
    "id": "e010ec4a",
    "metadata": {},
    "outputs": [],
@@ -70,17 +70,17 @@
     "    for i in range(len(grid)):\n",
     "        for j in range(len(grid[i])):\n",
     "            if grid[i][j] == \"1\":\n",
-    "                num += getIland(i, j, grid)\n",
+    "                num += getIsland(i, j, grid)\n",
     "    return num\n",
     "\n",
-    "def getIland(row, col, grid):\n",
+    "def getIsland(row, col, grid):\n",
     "    \n",
     "    grid[row][col] = \"2\"\n",
     "    \n",
     "    nrs = getNeighbours(row, col, grid)\n",
     "    for r, c in nrs:\n",
     "        if grid[r][c] == \"1\":\n",
-    "            getIland(r, c, grid)\n",
+    "            getIsland(r, c, grid)\n",
     "    return 1\n",
     "\n",
     "def getNeighbours(row, col, grid):\n",
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 35,
    "id": "f6766a9a",
    "metadata": {},
    "outputs": [
@@ -110,7 +110,7 @@
        "3"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -127,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 36,
    "id": "e2e901a5",
    "metadata": {},
    "outputs": [
@@ -137,7 +137,7 @@
        "1"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
