--- a/03_FastSlowPointers/Easy-Middle of the Linked List.ipynb
+++ b/03_FastSlowPointers/Easy-Middle of the Linked List.ipynb
@@ -7,7 +7,7 @@
     }
    },
    "cell_type": "markdown",
-   "id": "66f7028e",
+   "id": "9b0c4283",
    "metadata": {},
    "source": [
     "## Problem: Middle of the Linked List\n",
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "raw",
-   "id": "33b639b4",
+   "id": "96b3f520",
    "metadata": {},
    "source": [
     "Approach:\n",
@@ -52,8 +52,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "88f4dc64",
+   "execution_count": 15,
+   "id": "4230591e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,24 +77,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "7f3847ed",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "## Prepare the link list\n",
-    "head = None\n",
-    "head = insertNode(head, 1)\n",
-    "head = insertNode(head, 2)\n",
-    "head = insertNode(head, 3)\n",
-    "head = insertNode(head, 4)\n",
-    "head = insertNode(head, 5)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "id": "0c5c9e08",
+   "execution_count": 16,
+   "id": "8e5f08c1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -112,8 +96,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "id": "212cc8e0",
+   "execution_count": 17,
+   "id": "1dccf386",
    "metadata": {},
    "outputs": [
     {
@@ -125,17 +109,7 @@
     }
    ],
    "source": [
-    "midNode = middleNode(head)\n",
-    "print(midNode.val)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "id": "1961f478",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "## Example 1\n",
     "## Prepare the link list\n",
     "head = None\n",
     "head = insertNode(head, 1)\n",
@@ -143,13 +117,16 @@
     "head = insertNode(head, 3)\n",
     "head = insertNode(head, 4)\n",
     "head = insertNode(head, 5)\n",
-    "head = insertNode(head, 6)"
+    "\n",
+    "# Get the middle Node\n",
+    "midNode = middleNode(head)\n",
+    "print(midNode.val)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "ea6cb0fc",
+   "execution_count": 18,
+   "id": "764cf4dd",
    "metadata": {},
    "outputs": [
     {
@@ -161,17 +138,20 @@
     }
    ],
    "source": [
+    "## Example 2\n",
+    "## Prepare the link list\n",
+    "head = None\n",
+    "head = insertNode(head, 1)\n",
+    "head = insertNode(head, 2)\n",
+    "head = insertNode(head, 3)\n",
+    "head = insertNode(head, 4)\n",
+    "head = insertNode(head, 5)\n",
+    "head = insertNode(head, 6)\n",
+    "\n",
+    "# Get the middle Node\n",
     "midNode = middleNode(head)\n",
     "print(midNode.val)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "82d3364c",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
