Fast and Slow Pointers pattern

--- a/03_FastSlowPointers/Easy-Palindrome Linked List.ipynb
+++ b/03_FastSlowPointers/Easy-Palindrome Linked List.ipynb
@@ -7,7 +7,7 @@
     }
    },
    "cell_type": "markdown",
-   "id": "775cb647",
+   "id": "f01940fd",
    "metadata": {},
    "source": [
     "## Problem: Palindrome Linked List\n",
@@ -36,9 +36,23 @@
    ]
   },
   {
+   "cell_type": "raw",
+   "id": "8acb0cd4",
+   "metadata": {},
+   "source": [
+    "Approach:\n",
+    "To know the palindrome, we need to check if value of first node is equal to value of last node, then value of second node to second last node. Keep checking by moving to next node from start and previous node from last till reach to the middle.\n",
+    "As, it is single linkkedlist, so going back (previous node) is not possible. Solution is that:\n",
+    "1. Go to the middle node\n",
+    "2. Reverse the list from middle to last node.\n",
+    "3. Now, have two pointers, from start and mid positions.\n",
+    "4. Keep moving forward and compare the values, if not matching then return False. Otherwise, at the end return True."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "38d6a542",
+   "execution_count": 6,
+   "id": "fd89f100",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,8 +76,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "e9f9e9c9",
+   "execution_count": 7,
+   "id": "e0c355ff",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -107,8 +121,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "7dba02dc",
+   "execution_count": 8,
+   "id": "8ecbc412",
    "metadata": {},
    "outputs": [
     {
@@ -117,7 +131,7 @@
        "True"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -138,8 +152,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "de0071fa",
+   "execution_count": 9,
+   "id": "5547bc5a",
    "metadata": {},
    "outputs": [
     {
@@ -148,7 +162,7 @@
        "False"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -168,7 +182,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "437022ef",
+   "id": "908e7897",
    "metadata": {},
    "outputs": [],
    "source": []
