Fast and Slow Pointers pattern

--- a/03_FastSlowPointers/Medium-Rearrange of LinkedList.ipynb
+++ b/03_FastSlowPointers/Medium-Rearrange of LinkedList.ipynb
@@ -7,7 +7,7 @@
     }
    },
    "cell_type": "markdown",
-   "id": "eab8f968",
+   "id": "9d5e1e9e",
    "metadata": {},
    "source": [
     "## Problem: Rearrange of linkedlist\n",
@@ -46,9 +46,19 @@
    ]
   },
   {
+   "cell_type": "raw",
+   "id": "d6130aab",
+   "metadata": {},
+   "source": [
+    "Approach:\n",
+    "This problem is combination of getting middle, reverse and interweav list. \n",
+    "Split the list to half, reverse the second half and interwaeve two lists."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "7a9eeb85",
+   "id": "3cb968e9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,7 +89,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "ca57b5af",
+   "id": "af0d1a88",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -129,7 +139,7 @@
   {
    "cell_type": "code",
    "execution_count": 45,
-   "id": "728b6952",
+   "id": "bb3a6610",
    "metadata": {},
    "outputs": [
     {
@@ -164,7 +174,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "19ed8ec3",
+   "id": "5265fcb0",
    "metadata": {},
    "outputs": [
     {
@@ -197,7 +207,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b218dcdb",
+   "id": "559c26f0",
    "metadata": {},
    "outputs": [],
    "source": []
