Fast and Slow Pointers pattern

--- a/03_FastSlowPointers/Medium-Rearrange of LinkedList.ipynb
+++ b/03_FastSlowPointers/Medium-Rearrange of LinkedList.ipynb
@@ -7,7 +7,7 @@
     }
    },
    "cell_type": "markdown",
-   "id": "95606573",
+   "id": "ccf518a8",
    "metadata": {},
    "source": [
     "## Problem: Rearrange of linkedlist\n",
@@ -46,11 +46,11 @@
    ]
   },
   {
-   "cell_type": "raw",
-   "id": "d8eda1c7",
+   "cell_type": "markdown",
+   "id": "1dd3f037",
    "metadata": {},
    "source": [
-    "Approach:\n",
+    "#### Approach:\n",
     "This problem is combination of getting middle, reverse and interweav list. \n",
     "Split the list to half, reverse the second half and interwaeve two lists."
    ]
@@ -58,7 +58,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "8a3cef02",
+   "id": "e6358fbf",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,7 +89,7 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "id": "eeebc332",
+   "id": "c7f58605",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -139,7 +139,7 @@
   {
    "cell_type": "code",
    "execution_count": 49,
-   "id": "405311a9",
+   "id": "45e60063",
    "metadata": {},
    "outputs": [
     {
@@ -174,7 +174,7 @@
   {
    "cell_type": "code",
    "execution_count": 50,
-   "id": "3cda8304",
+   "id": "0befe62b",
    "metadata": {},
    "outputs": [
     {
@@ -207,7 +207,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1dca8f52",
+   "id": "ab49f627",
    "metadata": {},
    "outputs": [],
    "source": []
