--- a/03_FastSlowPointers/Easy-Happy Number.ipynb
+++ b/03_FastSlowPointers/Easy-Happy Number.ipynb
@@ -41,11 +41,11 @@
    ]
   },
   {
-   "cell_type": "raw",
-   "id": "5520010f",
+   "cell_type": "markdown",
+   "id": "9fcba7b7",
    "metadata": {},
    "source": [
-    "Approach:\n",
+    "### Approach:\n",
     "If number is a happy number, the cycle will endup at 1. If not a happy number, then cycle will stuck with any of previously calculated number. \n",
     "ex: for given number n= 3. Sequence repeats at 37.  9,81,65,61,37,58,89,145,42,20,4,16,37\n",
     "\n",
