--- a/03_FastSlowPointers/Easy-Middle of the Linked List.ipynb
+++ b/03_FastSlowPointers/Easy-Middle of the Linked List.ipynb
@@ -7,7 +7,7 @@
     }
    },
    "cell_type": "markdown",
-   "id": "9b0c4283",
+   "id": "9baa93d4",
    "metadata": {},
    "source": [
     "## Problem: Middle of the Linked List\n",
@@ -41,11 +41,11 @@
    ]
   },
   {
-   "cell_type": "raw",
-   "id": "96b3f520",
+   "cell_type": "markdown",
+   "id": "ff08545a",
    "metadata": {},
    "source": [
-    "Approach:\n",
+    "### Approach:\n",
     "To get the mid point, let one pointer move with each element (slow), and another pointer move with each two elements, double faster than slow poointer. By the time fast pointer will reach to the end, slow pointer will reach to the middle element.\n",
     "To satisfy, both odd and even number of elements, we check nullity of fast and fast.next pointer. If number of node is even, then fast would be None. If number of nodes are odd then fast.next would be None and break the loop."
    ]
@@ -53,7 +53,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "4230591e",
+   "id": "14892168",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,7 +78,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "8e5f08c1",
+   "id": "12f363fc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,7 +97,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "1dccf386",
+   "id": "1a58468a",
    "metadata": {},
    "outputs": [
     {
@@ -126,7 +126,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "764cf4dd",
+   "id": "06aa0527",
    "metadata": {},
    "outputs": [
     {
