--- a/03_FastSlowPointers/Easy-Palindrome Linked List.ipynb
+++ b/03_FastSlowPointers/Easy-Palindrome Linked List.ipynb
@@ -7,7 +7,7 @@
     }
    },
    "cell_type": "markdown",
-   "id": "6b2151f1",
+   "id": "ae182604",
    "metadata": {},
    "source": [
     "## Problem: Palindrome Linked List\n",
@@ -36,11 +36,11 @@
    ]
   },
   {
-   "cell_type": "raw",
-   "id": "00bc884d",
+   "cell_type": "markdown",
+   "id": "5bddd98b",
    "metadata": {},
    "source": [
-    "Approach:\n",
+    "### Approach:\n",
     "To know the palindrome, we need to check if value of first node is equal to value of last node, then value of second node to second last node. Keep checking by moving to next node from start and previous node from last till reach to the middle.\n",
     "As, it is single linkkedlist, so going back (previous node) is not possible. Solution is that:\n",
     "1. Go to the middle node\n",
@@ -52,7 +52,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "ba3bc795",
+   "id": "c12a034a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,7 +77,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "64491ce5",
+   "id": "9137341f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -122,7 +122,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "719f2c36",
+   "id": "ae487d4a",
    "metadata": {},
    "outputs": [
     {
@@ -153,7 +153,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "ad49bcb3",
+   "id": "b9a7cf97",
    "metadata": {},
    "outputs": [
     {
@@ -182,7 +182,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7bc13bf3",
+   "id": "3d8381dd",
    "metadata": {},
    "outputs": [],
    "source": []
