--- a/02_Island-MatrixTraversal/Easy-Flood Fill.ipynb
+++ b/02_Island-MatrixTraversal/Easy-Flood Fill.ipynb
@@ -50,11 +50,11 @@
    ]
   },
   {
-   "cell_type": "raw",
-   "id": "860bd593",
+   "cell_type": "markdown",
+   "id": "f588c5fb",
    "metadata": {},
    "source": [
-    "Approach:\n",
+    "### Approach:\n",
     "Island problems have simple technique to visit each cells, mark visited cell either modifying the matrix or taking auxiliary matrix with boolean values. Thi helps to avoid multiple time visit of same cell.\n",
     "You can use DFS or BFS to solve it.\n",
     "Here, starting cell is given also color is given. If you see condition carefully, image's cell value and color value can be same or different. Also, cell value is not restricted to 0 or 1. However, cell value would be more than zero.\n",
