--- a/02_Island-MatrixTraversal/Easy-Island Perimeter.ipynb
+++ b/02_Island-MatrixTraversal/Easy-Island Perimeter.ipynb
@@ -48,11 +48,12 @@
    ]
   },
   {
-   "cell_type": "raw",
-   "id": "796fb101",
+   "cell_type": "markdown",
+   "id": "9e25d2a6",
    "metadata": {},
    "source": [
-    "Approach: Look at the following conditions for cells having value 1:\n",
+    "### Approach: \n",
+    "Look at the following conditions for cells having value 1:\n",
     "1. If there is one cell: perimeter = 4\n",
     "2. If there is two conneted cells : Perimeter = 4 + 4 -1-1 = 4 - number of neighbour of cell1 - number of neighbour of cell2\n",
     "3. If there is three connected cells: Perimeter = 4+4+4 -2 -1-1 = 4 - number of neighbour of cell1 - number of neighbour of cell2 - number of neighbour of cell3\n",
