--- a/02_Island-MatrixTraversal/Easy-Number Of Islands.ipynb
+++ b/02_Island-MatrixTraversal/Easy-Number Of Islands.ipynb
@@ -44,11 +44,11 @@
    ]
   },
   {
-   "cell_type": "raw",
-   "id": "3c6a064e",
+   "cell_type": "markdown",
+   "id": "ac12cda8",
    "metadata": {},
    "source": [
-    "Approach:\n",
+    "### Approach:\n",
     "Island problems have simple technique to visit each cells, mark visited cell either modifying the matrix or taking auxiliary matrix with boolean values. This helps to avoid multiple time visit of same cell.\n",
     "You can use DFS or BFS to solve it.\n",
     "Here, as 1 represents the land, so start with cell having value = 1.\n",
