--- a/02_Island-MatrixTraversal/Medium-Detect Cycles in 2D Grid.ipynb
+++ b/02_Island-MatrixTraversal/Medium-Detect Cycles in 2D Grid.ipynb
@@ -56,11 +56,11 @@
    ]
   },
   {
-   "cell_type": "raw",
-   "id": "da6701f5",
+   "cell_type": "markdown",
+   "id": "2ae1fb23",
    "metadata": {},
    "source": [
-    "Approach:\n",
+    "### Approach:\n",
     "It is very similar to other Island pattern problems. Only changes is to return True or False, if cycle detects.\n",
     "Here couple of important points, which leads to slight change in the code:\n",
     "1. Avoid the parent in the cycle. Means, if cell at (0,0)has same value as its neighbouring cell ((1,0) for ex), then it is not cycle.\n",
