--- a/02_Island-MatrixTraversal/Medium-Number of Distinct Island.ipynb
+++ b/02_Island-MatrixTraversal/Medium-Number of Distinct Island.ipynb
@@ -40,11 +40,11 @@
    ]
   },
   {
-   "cell_type": "raw",
-   "id": "17cb1ec5",
+   "cell_type": "markdown",
+   "id": "30e1dd91",
    "metadata": {},
    "source": [
-    "Approach:\n",
+    "### Approach:\n",
     "    This is simlar to number of island problem. Only difference here is we need to find distinct island. So, in place of number of island, will use set and store the relative coordinates of all neighboiring cells having value 1. 1st cell will have coordinate (0, 0), right side cell =(0,1), bottom left cell = (1,0) and botton right(1,1).\n",
     "\n",
     "Then return the length of set.\n",
