--- a/02_Island-MatrixTraversal/Easy-Biggest Island.ipynb
+++ b/02_Island-MatrixTraversal/Easy-Biggest Island.ipynb
@@ -42,11 +42,11 @@
    ]
   },
   {
-   "cell_type": "raw",
-   "id": "02bbe759",
+   "cell_type": "markdown",
+   "id": "a3e49090",
    "metadata": {},
    "source": [
-    "Approach:\n",
+    "### Approach:\n",
     "Island problems have simple technique to visit each cells, mark visited cell either modifying the matrix or taking auxiliary matrix with boolean values. This helps to avoid multiple time visit of same cell.\n",
     "You can use DFS or BFS to solve it.\n",
     "Here, Need to find out the number of contigous 1 when start from the cell having value 1. While visiting each cell increase the count by 1. Also mark the cell value = 2 so that same cell should not be executed again."
