--- a/02_Island-MatrixTraversal/Easy-Number of closed Islands.ipynb
+++ b/02_Island-MatrixTraversal/Easy-Number of closed Islands.ipynb
@@ -53,11 +53,11 @@
    ]
   },
   {
-   "cell_type": "raw",
-   "id": "98e75779",
+   "cell_type": "markdown",
+   "id": "3591bb87",
    "metadata": {},
    "source": [
-    "Approach:\n",
+    "### Approach:\n",
     "Island problems have simple technique to visit each cells, mark visited cell either modifying the matrix or taking auxiliary matrix with boolean values. This helps to avoid multiple time visit of same cell.\n",
     "You can use DFS or BFS to solve it.\n",
     "Here, as 0 represents the land, so start with cell having value = 0.\n",
