--- a/01_TwoPointers/Easy-Comparing Strings containing Backspaces.ipynb
+++ b/01_TwoPointers/Easy-Comparing Strings containing Backspaces.ipynb
@@ -39,11 +39,11 @@
    ]
   },
   {
-   "cell_type": "raw",
-   "id": "9daff677",
+   "cell_type": "markdown",
+   "id": "9979b9b8",
    "metadata": {},
    "source": [
-    "Approach: \n",
+    "### Approach: \n",
     "It does not follow the template so far of Two pointers pattern.\n",
     "Start from last index, move index with number of backspaces, compare letters from both string at that position and return True or False.\n",
     "1. Two pointers each for each strings, set position to last character of string.\n",
