--- a/01_TwoPointers/Easy-Pair with Target Sum.ipynb
+++ b/01_TwoPointers/Easy-Pair with Target Sum.ipynb
@@ -24,11 +24,11 @@
    ]
   },
   {
-   "cell_type": "raw",
-   "id": "7a302ba4",
+   "cell_type": "markdown",
+   "id": "6368d05c",
    "metadata": {},
    "source": [
-    "Approach:\n",
+    "### Approach:\n",
     "As array is sorted. So this can be done with O(1) space complexity. Use the Two pointers. Left and right starts from 0th and last index.\n",
     "If sum of numbers at position of left and right pointers are greater than Target, so we need to reduce the sum, hence take one smaller iterm.This can be done by reducing the right position by 1. If sum is smaller than Target then need to take one bigger number. This can be done by moving left pointer by 1.\n",
     "If sum is equal to the Target, then return the left and right pinters."
