--- a/01_TwoPointers/Easy-Squares of a Sorted Array.ipynb
+++ b/01_TwoPointers/Easy-Squares of a Sorted Array.ipynb
@@ -32,11 +32,11 @@
    ]
   },
   {
-   "cell_type": "raw",
-   "id": "114caccb",
+   "cell_type": "markdown",
+   "id": "412aa018",
    "metadata": {},
    "source": [
-    "Approach:\n",
+    "### Approach:\n",
     "As array can have negative numbers, so simply square of each numbers will not work here. Example: in non decresing order, -3 come before 2, but after squre -3 will become 9 and 2 will become 4. Hence, 9 should come after 4.So, simply square at the same position will give wrong ordering.\n",
     "1. Since data is sorted, so we can apply Two pointers approach. Left at position 0 and right at position end.\n",
     "2. Compare the square value of numbers at both position.\n",
