--- a/01_TwoPointers/Medium-Dutch National Flag Problem.ipynb
+++ b/01_TwoPointers/Medium-Dutch National Flag Problem.ipynb
@@ -34,11 +34,11 @@
    ]
   },
   {
-   "cell_type": "raw",
-   "id": "ebed7310",
+   "cell_type": "markdown",
+   "id": "49cfd002",
    "metadata": {},
    "source": [
-    "# Approach:\n",
+    "### Approach:\n",
     "    Take two pointers, left and right starting at zero and last position respectively.\n",
     "    Run a loop with i as iteration position starting from 0 to right position.\n",
     "    Check, if number at i is 0, then swap it with left position and increase left to next position.\n",
