--- a/01_TwoPointers/Medium-Minimum Window Sort.ipynb
+++ b/01_TwoPointers/Medium-Minimum Window Sort.ipynb
@@ -37,11 +37,11 @@
    ]
   },
   {
-   "cell_type": "raw",
-   "id": "c2c1d5c7",
+   "cell_type": "markdown",
+   "id": "c1764515",
    "metadata": {},
    "source": [
-    "Approach:\n",
+    "### Approach:\n",
     "    Find out the item when ordering is broken.Means when earlier number is greater than next number. To kow the positions from where ordering should restore, we must know the minimum number and maximum number in broken order. \n",
     "    So, get minimum number and maximum number whenever ordering is broken in a for loop.\n",
     " If no orderig is broken, then return zero.\n",
