--- a/01_TwoPointers/Medium-Quadruple Sum to Target.ipynb
+++ b/01_TwoPointers/Medium-Quadruple Sum to Target.ipynb
@@ -36,11 +36,11 @@
    ]
   },
   {
-   "cell_type": "raw",
-   "id": "7497612d",
+   "cell_type": "markdown",
+   "id": "e7fbc319",
    "metadata": {},
    "source": [
-    "Approach:\n",
+    "### Approach:\n",
     "The approach is similar to Three sum problem. Only need to add extra loop. "
    ]
   },
