--- a/01_TwoPointers/Medium-Subarray Product Less Than K.ipynb
+++ b/01_TwoPointers/Medium-Subarray Product Less Than K.ipynb
@@ -33,11 +33,11 @@
    ]
   },
   {
-   "cell_type": "raw",
-   "id": "12cfe6bd",
+   "cell_type": "markdown",
+   "id": "1936b4a2",
    "metadata": {},
    "source": [
-    "Approach:\n",
+    "### Approach:\n",
     "    This is the combination of Sliding Window and Two pointers pattern problem.\n",
     "    As, array is not sorted and answer needs in contiguous subarray (so can not sort the array).\n",
     "    Idea here is to take two pointers, left and right. Both start from zero. keep moving the right pointer with product of each number and keep checking if product is less tha K.\n",
