--- a/01_TwoPointers/Medium-Triplet Sum Close To Target.ipynb
+++ b/01_TwoPointers/Medium-Triplet Sum Close To Target.ipynb
@@ -36,11 +36,11 @@
    ]
   },
   {
-   "cell_type": "raw",
-   "id": "6151d368",
+   "cell_type": "markdown",
+   "id": "8d3cd434",
    "metadata": {},
    "source": [
-    "Approach:\n",
+    "### Approach:\n",
     "    This is simlar to Triplet sum to zero problem. Iteration woould be same with Two pointers approach with for loop above.\n",
     "    Here, need to check the difference of sum with Target in each iteration. \n",
     "    If diff is smaller then that sum is the answer."
