--- a/01_TwoPointers/Medium-Triplet Sum to Zero.ipynb
+++ b/01_TwoPointers/Medium-Triplet Sum to Zero.ipynb
@@ -43,11 +43,11 @@
    ]
   },
   {
-   "cell_type": "raw",
-   "id": "273065a4",
+   "cell_type": "markdown",
+   "id": "a8742097",
    "metadata": {},
    "source": [
-    "Approach:\n",
+    "### Approach:\n",
     "    Sort the array, then apply the Two pointer solution.\n",
     "    Since, it is looking for three sum, so sun two pointers for each value of i.\n",
     "    i the iterator for loop.s"
