--- a/01_TwoPointers/Medium-Triplets With Smaller Sum.ipynb
+++ b/01_TwoPointers/Medium-Triplets With Smaller Sum.ipynb
@@ -27,11 +27,11 @@
    ]
   },
   {
-   "cell_type": "raw",
-   "id": "15293e99",
+   "cell_type": "markdown",
+   "id": "93196946",
    "metadata": {},
    "source": [
-    "Approach:\n",
+    "### Approach:\n",
     "    The approach is same as Triplet Sum, Two pointers approach. \n",
     "    Take a count varaible, which will be updated whenever, sum is less than Target. \n",
     "    The trick here is, count += (right -left), becuase there can be (right-left) possibility of addition."
