Sliding window pattern

--- a/04_SlidingWindow/Hard-Words Concatenation.ipynb
+++ b/04_SlidingWindow/Hard-Words Concatenation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "6d4cfc98",
+   "id": "602343e0",
    "metadata": {},
    "source": [
     "## Problem: Words Concatenation\n",
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1f28cc5f",
+   "id": "8aac5d80",
    "metadata": {},
    "source": [
     "### Approach:\n",
@@ -73,13 +73,13 @@
     "    \n",
     "Hence, left pointer shold move to one step to check all character, and right pointer should move to one word, and then should restart again from the left position, after checking the condition. Irrespective of condition result, right will again start fom left position. Left position will keep moving next position till the total number of character left.\n",
     "\n",
-    "In each step of left, need to assign left position to right position, have copy of hashmap and unique words. Because, right pointers movement update the hashmap and unique words. And in next iteration of left, hashmap and unique words should have unchanged data.\n"
+    "On each next step of left, need to assign left position to right position, have copy of hashmap and unique words. Because, right pointers movement update the hashmap and unique words. And in next iteration of left, hashmap and unique words should have unchanged data.\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
-   "id": "145d093a",
+   "execution_count": 28,
+   "id": "70f36c29",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -114,8 +114,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
-   "id": "c5587231",
+   "execution_count": 29,
+   "id": "471607ab",
    "metadata": {},
    "outputs": [
     {
@@ -124,7 +124,7 @@
        "[0, 9]"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -137,8 +137,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
-   "id": "f3dc3d43",
+   "execution_count": 30,
+   "id": "6f5a59c5",
    "metadata": {},
    "outputs": [
     {
@@ -147,7 +147,7 @@
        "[8]"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -160,8 +160,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
-   "id": "94e0415d",
+   "execution_count": 31,
+   "id": "c654a15d",
    "metadata": {},
    "outputs": [
     {
@@ -170,7 +170,7 @@
        "[0, 1, 2, 3, 4, 5, 6]"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -184,7 +184,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dac0f277",
+   "id": "801a4ce3",
    "metadata": {},
    "outputs": [],
    "source": []
