Cyclic Sort pattern

--- a/06_CyclicSort/Easy-CyclicSort.ipynb
+++ b/06_CyclicSort/Easy-CyclicSort.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "fd783200",
+   "id": "b4d369bb",
    "metadata": {},
    "source": [
     "## Problem: CyclicSort\n",
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fa9d01b7",
+   "id": "7f60053a",
    "metadata": {},
    "source": [
     "### Approach:\n",
@@ -52,16 +52,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "ae3ee6c7",
+   "execution_count": 6,
+   "id": "38a7d3c7",
    "metadata": {},
    "outputs": [],
    "source": [
     "def cyclicSort(nums):\n",
     "    i = 0\n",
     "    while i < len(nums):\n",
-    "        if nums[i] != i+1:\n",
-    "            j = nums[i]-1\n",
+    "        j = nums[i]-1\n",
+    "        if nums[i] != nums[j]:\n",
     "            nums[i], nums[j] = nums[j], nums[i]\n",
     "        else:\n",
     "            i += 1\n",
@@ -71,8 +71,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "a9fa37dc",
+   "execution_count": 7,
+   "id": "10c36289",
    "metadata": {},
    "outputs": [
     {
@@ -81,7 +81,7 @@
        "[1, 2, 3, 4, 5, 6]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -93,8 +93,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "b436ab1d",
+   "execution_count": 8,
+   "id": "97297cae",
    "metadata": {},
    "outputs": [
     {
@@ -103,7 +103,7 @@
        "[1, 2, 3, 4, 5]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -116,7 +116,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "75b38e54",
+   "id": "d2d4370c",
    "metadata": {},
    "outputs": [],
    "source": []
