--- a/06_CyclicSort/Easy-Find the missing number.ipynb
+++ b/06_CyclicSort/Easy-Find the missing number.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "702be9e3",
+   "id": "37874da8",
    "metadata": {},
    "source": [
     "## Problem: Missing Number\n",
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8db2ddc1",
+   "id": "f1a082c4",
    "metadata": {},
    "source": [
     "### Approach:\n",
@@ -58,8 +58,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "4db04f08",
+   "execution_count": 7,
+   "id": "34aedfab",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,8 +67,8 @@
     "    n = len(nums)\n",
     "    i = 0\n",
     "    while i < len(nums):\n",
-    "        if nums[i] < n and nums[i] != i:\n",
-    "            j = nums[i]\n",
+    "        j = nums [i]\n",
+    "        if nums[i] < n and nums[i] != nums[j]:\n",
     "            nums[i], nums[j] = nums[j], nums[i]\n",
     "        else:\n",
     "            i += 1\n",
@@ -80,8 +80,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "0029a390",
+   "execution_count": 8,
+   "id": "2223cc12",
    "metadata": {},
    "outputs": [
     {
@@ -90,7 +90,7 @@
        "2"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -102,8 +102,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "7ae7c069",
+   "execution_count": 9,
+   "id": "d5043704",
    "metadata": {},
    "outputs": [
     {
@@ -112,7 +112,7 @@
        "2"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -124,8 +124,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "d73a6bc5",
+   "execution_count": 10,
+   "id": "f6faceac",
    "metadata": {},
    "outputs": [
     {
@@ -134,7 +134,7 @@
        "2"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -146,8 +146,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "a45d7938",
+   "execution_count": 11,
+   "id": "a16f3252",
    "metadata": {},
    "outputs": [
     {
@@ -156,7 +156,7 @@
        "8"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -169,7 +169,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6aa3a26b",
+   "id": "6616b62b",
    "metadata": {},
    "outputs": [],
    "source": []
